# TheEducator

./: README.md
Presentation/: .~lock.Edge Runner.pptx#
offline-chatbot/: pyproject.toml
offline-chatbot/offline_chatbot/: ai_assistant.py  api.py  main.ipynb  main.py
the-educator/: app.json  package-lock.json  package.json
the-educator/app/(tabs)/: index.tsx
